--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Game_GuessTheNumber</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -17,6 +17,9 @@
             <button>Угадать!</button>
         </div>
         <p></p>
+        <div class="btns">
+
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
